# dl-training

./: .gitignore  README.md  financial_dl_tutorial.ipynb  pyproject.toml
.claude/: settings.local.json
notebooks/: Quant_Finance_From_Zero.ipynb  graduate_probability.ipynb  training.ipynb
notebooks/finance/: 00_dx_quickstart.ipynb  01_dx_frame.ipynb  02_dx_models.ipynb  02_market_prediction.ipynb  03_dx_valuation_single_risk.ipynb  04_dx_valuation_multi_risk.ipynb  06_dx_portfolio_parallel.ipynb  07_dx_portfolio_risk.ipynb  08_dx_fourier_pricing.ipynb  09_dx_calibration.ipynb  10_dx_interest_rate_swaps.ipynb  11_dx_mean_variance_portfolio.ipynb  12_dx_stochastic_short_rates.ipynb  13_dx_quite_complex_portfolios.ipynb  basic_viz.ipynb  pffcourse_01.ipynb  pffcourse_02.ipynb  pffcourse_03.ipynb  pffcourse_04.ipynb  pffcourse_05.ipynb  pffcourse_06.ipynb  quant_platform.ipynb
notebooks/shreve/: week01_probability_review_stochastic_processes.ipynb  week02_random_walk_brownian_motion.ipynb  week05_ito_lemma_applications.ipynb  (+11 more)
prep/: deutsche_prep.md
scripts/: audit_notebook_latex.py  baxter_rennie_enrichment.py  fix_notebook_latex_for_katex.py  generate_shreve_notebooks.py
stats/: advanced_stats.aux  advanced_stats.fdb_latexmk  advanced_stats.fls  advanced_stats.out  advanced_stats.tex  advanced_stats.toc  intermediate_stats.aux  intermediate_stats.fdb_latexmk  intermediate_stats.fls  intermediate_stats.out  intermediate_stats.tex  intermediate_stats.toc  intro_stats.aux  intro_stats.fdb_latexmk  intro_stats.fls  intro_stats.out  intro_stats.tex  intro_stats.toc
(+42 files in other folders)
