[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "training-project"
version = "1.0"
description = "Training project that demonstrates my ability to build everything from scratch."
requires-python = ">=3.12"
dependencies = [
  "pandas",
  "numpy",
  "scipy",
  "yfinance",
  "requests",
  "duckdb",
  "pydantic",
  "plotly",
  "streamlit",
  "typer",
  "rich",
  "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/training_project"]
